--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,13 @@
 # in the templates via {{ site.myvariable }}.
 title: Polskie Samochody Osobowe
 email: your-email@domain.com
-description: Katalog Polskich samochodów osobowych 
+description: Katalog Polskich samochodów osobowych
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+port: 4001
 
 # Build settings
 markdown: kramdown
-theme: minima
 gems:
   - jekyll-feed
 exclude:
